project service tests